[fix] inking link fixed and overflow

--- a/app/assets/stylesheets/inking.css.scss
+++ b/app/assets/stylesheets/inking.css.scss
@@ -53,8 +53,8 @@ body {
 			margin: 20px 0 0 0;
 			padding: 20px 5px;
 			border-radius: 5px;
-			box-shadow: 0px 5px 20px 0 rgba(0,0,0,0.13);
-			overflow: scroll;
+			box-shadow: 0px 5px 20px 0 rgba(0,0,0,0.13);			
+			overflow: auto;
 			width: 90%;
 			height: 200px;
 			white-space: pre-wrap;
